[package]
name = "e114_core"
version = "0.2.0"
authors = ["Andras Mocsary <nobody@reedwolf.com>"]
edition = "2018"
repository = "https://github.com/element114/e114_core"
documentation = "https://docs.rs/e114_core"
license = "MIT OR Apache-2.0"
description = "A convenient wrapper around several rust web frameworks to isolate business logic from protocol handling."
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.*", features = ["derive"] }
serde_json = "1.*"
# this crate is compatible with schemars 0.6.* and 0.7.*
schemars = { version =  ">=0.6", optional = true }
log = ">=0.4"
# this crate is compatible with http 0.1.* and 0.2.*
http = ">=0.1"
# this crate is compatible with actix-web 1.*, 2.* and 3.*
actix-web = { version = "3.0", optional = true }
hyper = { version = ">=0.11", optional = true }

[features]
default = []
jsonschema = ["schemars"]
actix_web = ["actix-web"]
hyper_body = ["hyper"]

[dev-dependencies]
schemars = { version =  ">=0.6" }

[package.metadata.docs.rs]
all-features = true
